infra-prod/security_groups.tf
resource "aws_security_group" "alb_sg" {
  name        = var.alb_sg_name
  description = "Security Group to allow Ingress and Egress traffic on ALB"
  vpc_id      = data.aws_vpc.prod_vpc.id
}

resource "aws_security_group" "app_sg" {
  name        = var.app_sg_name
  description = "Security Group to allow Ingress and Egress traffic for React and Node app"
  vpc_id      = data.aws_vpc.prod_vpc.id
}
